# Dsl фичи main: в язык выражений Getl добавлены функции parseProperties и text2List.
# Getl баги
* getl.csv.CSVDriver: при чтении записей eachRow могли не наследоваться параметры форматирования типов данных от соединения, когда они не были указаны в датасете.